syntax = "proto3";

option go_package = "github.com/broswen/kvs";

message SetValueRequest {
  string key = 1;
  string value = 2;
}

message SetValueResponse {
  string key = 1;
}

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  string key = 1;
  string value = 2;
}

message DeleteValueRequest {
  string key = 1;
}

message DeleteValueResponse {
  string key = 1;
}

service KeyValueService {
  rpc SetValue (SetValueRequest) returns (SetValueResponse);
  rpc GetValue (GetValueRequest) returns (GetValueResponse);
  rpc DeleteValue (DeleteValueRequest) returns (DeleteValueResponse);
}